application-manifests/03-k8s-deploy-test/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-deploy-test
  namespace: apps
  labels:
    app: k8s-deploy-test
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: k8s-deploy-test
