application-manifests/03-k8s-deploy-test/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-deploy-test
  namespace: apps
  labels:
    app: k8s-deploy-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: k8s-test.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s-deploy-test
            port:
              number: 8080
